--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center text-white">
-      <img src="img/6295120.jpg" alt="foto profile" width="150" class="rounded-circle img-thumbnail" />
+      <img src="img/photo_2022-06-04_18-59-26.jpg" alt="foto profile" width="150" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Saiful Anwar</h1>
       <p class="lead">Jaringan | Camping | Merekam</p>
       <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
