--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center text-white">
           <div class="col-md-4">
-            <p>hai... nama saya Saiful Anwar. saya tinggal di Sepaku, Penajam Paser Utara.
+            <p>nama saya Saiful Anwar. saya tinggal di Sepaku, Penajam Paser Utara.
               saat ini saya bekerja di PT Telkom Akses Regional 6 Kalimantan.
             </p>
           </div>
