--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="text/style.css"/>
     <!-- ahkir css -->
   </head>
-  <body id="home">
+  <body class="font-mono" id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container">
@@ -41,26 +41,24 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center text-white">
-      <img src="img/photo_2022-06-04_18-59-26.jpg" alt="foto profile" width="150" class="rounded-circle img-thumbnail" />
+      <img src="img/6295120.jpg" alt="foto profile" width="150" class="rounded-circle img-thumbnail" /><br>
       <h1 class="display-4">Saiful Anwar</h1>
-      <p class="lead">Jaringan | Camping | Merekam</p>
-      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#212529"
-          fill-opacity="1"
-          d="M0,320L26.7,282.7C53.3,245,107,171,160,160C213.3,149,267,203,320,229.3C373.3,256,427,256,480,256C533.3,256,587,256,640,256C693.3,256,747,256,800,229.3C853.3,203,907,149,960,160C1013.3,171,1067,245,1120,256C1173.3,267,1227,213,1280,181.3C1333.3,149,1387,139,1413,133.3L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
-        ></path>
-      </svg> -->
+      <p class="lead">Jaringan | Camping | Merekam</p><br>
+      <a type="button" href="galery.html" class="btn btn-outline-light">Galery</a>
     </section>
     <!-- ahkir jumbotron -->
+
+
+
     <!-- about -->
+    <br>
     <section id="about">
       <div class="container">
         <div class="row text-center text-white">
           <div class="col">
             <h2>About Me</h2>
           </div>
-        </div>
+        </div><br>
         <div class="row justify-content-center fs-5 text-center text-white">
           <div class="col-md-4">
             <p>nama saya Saiful Anwar. saya tinggal di Sepaku, Penajam Paser Utara.
@@ -115,7 +113,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> 
       </div>
 
     <!-- ahkir project -->
@@ -130,24 +128,33 @@
         </div>
         <div class="row justify-content-center text-white">
           <div class="col-md-6">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="anaksepaku-contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama"/>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email"/>
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
-            </form>
+              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+              
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm " role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
+            </form> 
           </div>
         </div>
-      </div>
+      </div><br><br>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#212529"
@@ -164,7 +171,37 @@
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="" class="text-white fw-bold">Saiful Anwar</a></p>
     </footer>
     <!-- ahkir footer -->
-   
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbyMQaxLZTNzcjMJDj5NP1CYmVSLHLPymaOxZlZMU3VrJ5mwbMqrRrpgmmNcRGmiUxG2cw/exec'
+      const form = document.forms['anaksepaku-contact-form']
+      const btnkirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
+
+    
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        // ketika tombol submit di klik
+        // tampilkan tombol loading ,hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnkirim.classList.toggle('d-none');
+
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then(response => { 
+            // tampilkan tombol kirim, hilangkan tombol loading
+            btnLoading.classList.toggle('d-none');
+            btnkirim.classList.toggle('d-none');
+            // tampilakn alert
+            myAlert.classList.toggle('d-none');
+            // reset formnya
+            form.reset();
+
+            console.log('Success!', response)
+        })
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script> -->
