--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/1.png" class="card-img-top" alt="project1" />
+              <img src="img/3.jpg" class="card-img-top" alt="project1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"><h5>Server Armbian</h5></p>
+                <p>Mengunakan mini server untuk kebutuhan e-learning, web server, server NAS, server VOIP lokal.</p>
+                <a class="btn btn-primary" href="armbian.html" role="button">More</a>
               </div>
             </div>
           </div>
