--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         </div><br>
         <div class="row justify-content-center fs-5 text-center text-white">
           <div class="col-md-4">
-            <p>nama saya Saiful Anwar. saya tinggal di Sepaku, Penajam Paser Utara.
-              saat ini saya bekerja di PT Telkom Akses Regional 6 Kalimantan.
+            <p>nama saya Saiful Anwar. saya tinggal di Sepaku, Penajam Paser Utara (Ibu Kota Nusantara).
             </p>
           </div>
           <div class="col-md-4">
