--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center text-white">
-      <img src="img/6295120.jpg" alt="foto profile" width="150" class="rounded-circle img-thumbnail" /><br><br>
+      <img src="img/profile.jpg" alt="foto profile" width="150" class="rounded-circle img-thumbnail" /><br><br>
       <h1 class="display-4">Saiful Anwar</h1>
       <p class="lead">Jaringan | Camping | Merekam</p><br>
       <a type="button" href="galery.html" class="btn btn-outline-light">Galery</a>
